typescript/checker/tests/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment4.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment4.ts:1:13
  |
1 | var v = { 0 };
  |             ^

